update client-side modular args to standard set that we suggest user's use